--- a/styles/modules/grid.scss
+++ b/styles/modules/grid.scss
@@ -1,7 +1,7 @@
 body {
-  font-size: 6px;
+  font-size: 16px;
   @media #{$medium} {
-    font-size: 16px;
+    font-size: 20px;
   }
   @media #{$large} {
     font-size: 24px;
